--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [
@@ -144,109 +144,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Id</td>\n",
-       "      <td>P1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>string</td>\n",
-       "      <td>internal</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Unique identifier for a SEMBU team member</td>\n",
-       "      <td>ID</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Name</td>\n",
-       "      <td>P2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P735</td>\n",
-       "      <td>First name/given name of SEMBU team member</td>\n",
-       "      <td>First name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Family Name</td>\n",
-       "      <td>P3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P734</td>\n",
-       "      <td>Surname/Family name of SEMBU team member</td>\n",
-       "      <td>Last name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Birthdate</td>\n",
-       "      <td>P4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P569</td>\n",
-       "      <td>Date of birth</td>\n",
-       "      <td>DOB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Nationality</td>\n",
-       "      <td>P5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P27</td>\n",
-       "      <td>Nationality of SEMBU team member</td>\n",
-       "      <td>Citizenship</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        column prop data_type_x type_x mapping_code_x description_x alias_x  \\\n",
-       "0           Id   P1         NaN    NaN            NaN           NaN     NaN   \n",
-       "1         Name   P2         NaN    NaN            NaN           NaN     NaN   \n",
-       "2  Family Name   P3         NaN    NaN            NaN           NaN     NaN   \n",
-       "3    Birthdate   P4         NaN    NaN            NaN           NaN     NaN   \n",
-       "4  Nationality   P5         NaN    NaN            NaN           NaN     NaN   \n",
-       "\n",
-       "   data_type_y    type_y mapping_code_y  \\\n",
-       "0       string  internal            NaN   \n",
-       "1  external-id  external           P735   \n",
-       "2  external-id  external           P734   \n",
-       "3  external-id  external           P569   \n",
-       "4  external-id  external            P27   \n",
-       "\n",
-       "                                description_y      alias_y  \n",
-       "0   Unique identifier for a SEMBU team member           ID  \n",
-       "1  First name/given name of SEMBU team member   First name  \n",
-       "2    Surname/Family name of SEMBU team member    Last name  \n",
-       "3                               Date of birth          DOB  \n",
-       "4            Nationality of SEMBU team member  Citizenship  "
+       "Empty DataFrame\n",
+       "Columns: [column, prop, data_type_x, type_x, mapping_code_x, description_x, alias_x, data_type_y, type_y, mapping_code_y, description_y, alias_y]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
