--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [
@@ -131,41 +131,72 @@
        "      <th></th>\n",
        "      <th>column</th>\n",
        "      <th>prop</th>\n",
-       "      <th>data_type_x</th>\n",
-       "      <th>type_x</th>\n",
-       "      <th>mapping_code_x</th>\n",
-       "      <th>description_x</th>\n",
-       "      <th>alias_x</th>\n",
-       "      <th>data_type_y</th>\n",
-       "      <th>type_y</th>\n",
-       "      <th>mapping_code_y</th>\n",
-       "      <th>description_y</th>\n",
-       "      <th>alias_y</th>\n",
+       "      <th>data_type</th>\n",
+       "      <th>type</th>\n",
+       "      <th>mapping_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Id</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>string</td>\n",
+       "      <td>internal</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Name</td>\n",
+       "      <td>P2</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Family Name</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Birthdate</td>\n",
+       "      <td>P4</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nationality</td>\n",
+       "      <td>P5</td>\n",
+       "      <td>external-id</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P27</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [column, prop, data_type_x, type_x, mapping_code_x, description_x, alias_x, data_type_y, type_y, mapping_code_y, description_y, alias_y]\n",
-       "Index: []"
+       "        column prop    data_type      type mapping_code\n",
+       "0           Id   P1       string  internal          NaN\n",
+       "1         Name   P2  external-id  external         P735\n",
+       "2  Family Name   P3  external-id  external         P734\n",
+       "3    Birthdate   P4  external-id  external         P569\n",
+       "4  Nationality   P5  external-id  external          P27"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(column_mapping)\n",
-    "p_df = pd.read_csv(project_mapping)\n",
-    "t_df = pd.read_csv(team_mapping)\n",
-    "#merge the two dataframes\n",
-    "df = df.merge(p_df, on=\"column\", how=\"inner\")\n",
-    "df = df.merge(t_df, on=\"column\", how=\"inner\")\n",
     "df.head()"
    ]
   },
