--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -202,6 +202,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "aa920ff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'column': 'Id',\n",
+       "  'prop': 'P1',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 1: {'column': 'Name',\n",
+       "  'prop': 'P2',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P735'},\n",
+       " 2: {'column': 'Family Name',\n",
+       "  'prop': 'P3',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P734'},\n",
+       " 3: {'column': 'Birthdate',\n",
+       "  'prop': 'P4',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P569'},\n",
+       " 4: {'column': 'Nationality',\n",
+       "  'prop': 'P5',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P27'},\n",
+       " 5: {'column': 'Category',\n",
+       "  'prop': 'P6',\n",
+       "  'data_type': 'wikibase-item',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 6: {'column': 'Start date',\n",
+       "  'prop': 'P7',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P580'},\n",
+       " 7: {'column': 'End date',\n",
+       "  'prop': 'P8',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P582'},\n",
+       " 8: {'column': 'Client Type',\n",
+       "  'prop': 'P9',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 9: {'column': 'Client',\n",
+       "  'prop': 'P10',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 10: {'column': 'Project',\n",
+       "  'prop': 'P11',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 11: {'column': 'Project Type',\n",
+       "  'prop': 'P12',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 12: {'column': 'Task',\n",
+       "  'prop': 'P13',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 13: {'column': 'Owner',\n",
+       "  'prop': 'P14',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 14: {'column': 'Member',\n",
+       "  'prop': 'P15',\n",
+       "  'data_type': 'string',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 15: {'column': 'Duration (in days)',\n",
+       "  'prop': 'P16',\n",
+       "  'data_type': 'time',\n",
+       "  'type': 'internal',\n",
+       "  'mapping_code': nan},\n",
+       " 16: {'column': 'Project Start date',\n",
+       "  'prop': 'P17',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P580'},\n",
+       " 17: {'column': 'Project End date',\n",
+       "  'prop': 'P18',\n",
+       "  'data_type': 'external-id',\n",
+       "  'type': 'external',\n",
+       "  'mapping_code': 'P582'}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.T.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "10185833",
    "metadata": {},
