Work in progress

--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -202,33 +202,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "aa920ff6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_values([{'prop': 'P1', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P2', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P735'}, {'prop': 'P3', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P734'}, {'prop': 'P4', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P569'}, {'prop': 'P5', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P27'}, {'prop': 'P6', 'data_type': 'wikibase-item', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P7', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P580'}, {'prop': 'P8', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P582'}, {'prop': 'P9', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P10', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P11', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P12', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P13', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P14', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P15', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P16', 'data_type': 'time', 'type': 'internal', 'mapping_code': nan}, {'prop': 'P17', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P580'}, {'prop': 'P18', 'data_type': 'external-id', 'type': 'external', 'mapping_code': 'P582'}])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "column_mapping = df.set_index(\"column\").T.to_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "10185833",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Id', 'Name', 'Family Name', 'Birthdate', 'Nationality', 'Category', 'Start date', 'End date', 'Client Type', 'Client', 'Project', 'Project Type', 'Task', 'Owner', 'Member', 'Duration (in days)', 'Project Start date', 'Project End date'])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "column_names = df.columns.to_list()"
+    "column_mapping.keys()"
    ]
   },
   {
