Work in progress

--- a/notebooks/insert_corpus.ipynb
+++ b/notebooks/insert_corpus.ipynb
@@ -212,23 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "10185833",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Id', 'Name', 'Family Name', 'Birthdate', 'Nationality', 'Category', 'Start date', 'End date', 'Client Type', 'Client', 'Project', 'Project Type', 'Task', 'Owner', 'Member', 'Duration (in days)', 'Project Start date', 'Project End date'])"
+       "{'prop': 'P18',\n",
+       " 'data_type': 'external-id',\n",
+       " 'type': 'external',\n",
+       " 'mapping_code': 'P582'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "column_mapping.keys()"
+    "column_mapping['Project End date']"
    ]
   },
   {
