--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9ef43b03-7605-465e-90b6-e02d86f56edb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1334018b-1b0d-4c5f-af1f-0fedbb61b5e0",
    "metadata": {},
    "outputs": [],
@@ -34,21 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, \"data\")\n",
-    "column_mapping = join(data_dir, \"column_mapping.csv\")\n",
-    "project_mapping = join(data_dir, \"project_mapping.csv\")\n",
-    "team_mapping = join(data_dir, \"team_mapping.csv\")"
+    "team_data = join(data_dir, \"BDMA_Team_v1.csv\")\n",
+    "column_mapping = join(data_dir, \"column_mapping.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "094b17a2-212a-43c4-bcf2-9b21f05a5d0f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "01c04e6a-c475-4f01-8f82-2bd1e5d4523d",
    "metadata": {},
    "outputs": [],
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8012c13a-2f8b-4205-8752-bb32c8f1538b",
    "metadata": {},
    "outputs": [
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1c962b5b-aea4-474f-8081-86f80e146f83",
    "metadata": {},
    "outputs": [],
@@ -104,8 +103,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(column_mapping)\n",
+    "column_mapping = df.set_index(\"column\").T.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "10185833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prop': 'P18',\n",
+       " 'data_type': 'external-id',\n",
+       " 'type': 'external',\n",
+       " 'mapping_code': 'P582'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_mapping['Project End date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "aa920ff6",
    "metadata": {},
    "outputs": [
     {
@@ -129,65 +163,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>column</th>\n",
-       "      <th>prop</th>\n",
-       "      <th>data_type</th>\n",
-       "      <th>type</th>\n",
-       "      <th>mapping_code</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Family Name</th>\n",
+       "      <th>Birthdate</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Start date</th>\n",
+       "      <th>End date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Id</td>\n",
-       "      <td>P1</td>\n",
-       "      <td>string</td>\n",
-       "      <td>internal</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>S000001</td>\n",
+       "      <td>Mohammad Zain</td>\n",
+       "      <td>Abbas</td>\n",
+       "      <td>09/05/1995</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N3</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>06/09/2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Name</td>\n",
-       "      <td>P2</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P735</td>\n",
+       "      <td>S000002</td>\n",
+       "      <td>Kainaat</td>\n",
+       "      <td>Amjid</td>\n",
+       "      <td>30/12/1996</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N1</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>13/09/2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Family Name</td>\n",
-       "      <td>P3</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P734</td>\n",
+       "      <td>S000003</td>\n",
+       "      <td>Sergio</td>\n",
+       "      <td>Postigo</td>\n",
+       "      <td>12/02/1996</td>\n",
+       "      <td>Peru</td>\n",
+       "      <td>SK-N2</td>\n",
+       "      <td>26/07/2022</td>\n",
+       "      <td>13/10/2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Birthdate</td>\n",
-       "      <td>P4</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Nationality</td>\n",
-       "      <td>P5</td>\n",
-       "      <td>external-id</td>\n",
-       "      <td>external</td>\n",
-       "      <td>P27</td>\n",
+       "      <td>S000004</td>\n",
+       "      <td>Emmanuel</td>\n",
+       "      <td>Jamin</td>\n",
+       "      <td>28/09/1978</td>\n",
+       "      <td>French</td>\n",
+       "      <td>SKL-N2</td>\n",
+       "      <td>10/01/2015</td>\n",
+       "      <td>11/01/2015</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        column prop    data_type      type mapping_code\n",
-       "0           Id   P1       string  internal          NaN\n",
-       "1         Name   P2  external-id  external         P735\n",
-       "2  Family Name   P3  external-id  external         P734\n",
-       "3    Birthdate   P4  external-id  external         P569\n",
-       "4  Nationality   P5  external-id  external          P27"
+       "        Id           Name Family Name   Birthdate Nationality Category  \\\n",
+       "0  S000001  Mohammad Zain       Abbas  09/05/1995   Pakistani    SK-N3   \n",
+       "1  S000002        Kainaat       Amjid  30/12/1996   Pakistani    SK-N1   \n",
+       "2  S000003         Sergio     Postigo  12/02/1996        Peru    SK-N2   \n",
+       "3  S000004       Emmanuel       Jamin  28/09/1978      French   SKL-N2   \n",
+       "\n",
+       "   Start date    End date  \n",
+       "0  19/07/2022  06/09/2022  \n",
+       "1  19/07/2022  13/09/2022  \n",
+       "2  26/07/2022  13/10/2022  \n",
+       "3  10/01/2015  11/01/2015  "
       ]
      },
      "execution_count": 14,
@@ -196,42 +242,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(column_mapping)\n",
+    "df = pd.read_csv(team_data)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "aa920ff6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "column_mapping = df.set_index(\"column\").T.to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "10185833",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'prop': 'P18',\n",
-       " 'data_type': 'external-id',\n",
-       " 'type': 'external',\n",
-       " 'mapping_code': 'P582'}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "column_mapping['Project End date']"
    ]
   },
   {
