--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -252,7 +252,9 @@
    "id": "29dc0a2d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "item = "
+   ]
   }
  ],
  "metadata": {
