--- a/notebooks/create_item.ipynb
+++ b/notebooks/create_item.ipynb
@@ -93,9 +93,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py Wikibase",
+   "display_name": "Python 3.10.4 ('wikibase': conda)",
    "language": "python",
-   "name": "wikibase"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -108,6 +108,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6c22d6f1796eae68ca5ff538193c965dfba0cad9bffc3b4e0ee17974b903305c"
+   }
   }
  },
  "nbformat": 4,
