Work in progress

--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -253,7 +253,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "item = "
+    "item = wbi.item.new()\n",
+    "item.labels.set('en', 'Mohammad Zain Abbas')\n",
+    "item.descriptions.set('en', 'BDMA Team Member')\n",
+    "item.sitelinks.set('enwiki', 'Mohammad Zain Abbas')\n",
+    "\n",
+    "item.write(login)\n"
    ]
   }
  ],
