Work in progress

--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,7 @@
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, \"data\")\n",
     "team_data = join(data_dir, \"BDMA_Team_v1.csv\")\n",
+    "project_data = join(data_dir, \"BDMA_Projects_v1.csv\")\n",
     "column_mapping = join(data_dir, \"column_mapping.csv\")"
    ]
   },
