--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "aa920ff6",
    "metadata": {},
    "outputs": [
@@ -237,14 +237,124 @@
        "3  10/01/2015  11/01/2015  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(team_data)\n",
-    "df.head()"
+    "team_df = pd.read_csv(team_data)\n",
+    "team_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9ad683cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Client Type</th>\n",
+       "      <th>Client</th>\n",
+       "      <th>Project</th>\n",
+       "      <th>Project Type</th>\n",
+       "      <th>Task</th>\n",
+       "      <th>Owner</th>\n",
+       "      <th>Member</th>\n",
+       "      <th>Duration (in days)</th>\n",
+       "      <th>Project Start date</th>\n",
+       "      <th>Project End date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Wikibase</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "      <td>Mohammad Zain Abbas</td>\n",
+       "      <td>47</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>06/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Solid Pods</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "      <td>Kainaat Amjid</td>\n",
+       "      <td>55</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>13/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Entity Resolution</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "      <td>Sergio Postigo</td>\n",
+       "      <td>60</td>\n",
+       "      <td>26/07/2022</td>\n",
+       "      <td>28/09/2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Client Type      Client Project Project Type               Task  \\\n",
+       "0     NTTData  SEMBU Team   SEMBU      Project           Wikibase   \n",
+       "1     NTTData  SEMBU Team   SEMBU      Project         Solid Pods   \n",
+       "2     NTTData  SEMBU Team   SEMBU      Project  Entity Resolution   \n",
+       "\n",
+       "            Owner               Member  Duration (in days) Project Start date  \\\n",
+       "0  Emmanuel Jamin  Mohammad Zain Abbas                  47         19/07/2022   \n",
+       "1  Emmanuel Jamin        Kainaat Amjid                  55         19/07/2022   \n",
+       "2  Emmanuel Jamin       Sergio Postigo                  60         26/07/2022   \n",
+       "\n",
+       "  Project End date  \n",
+       "0       06/09/2022  \n",
+       "1       13/09/2022  \n",
+       "2       28/09/2022  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project_df = pd.read_csv(project_data)\n",
+    "project_df.head()"
    ]
   },
   {
