--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -360,6 +360,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8754c3f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_df['full_name'] = team_df['First Name'] + \" \" + team_df['Last Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "29dc0a2d",
    "metadata": {},
    "outputs": [],
