Work in progress

--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -359,12 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8754c3f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_df['full_name'] = team_df['First Name'] + \" \" + team_df['Last Name']"
+    "team_df['full_name'] = team_df['Name'] + \" \" + team_df['Family Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fb321ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "member_df = team_df.merge(project_df, left_on=\"full_name\", right_on=\"Member\", how=\"left\")"
    ]
   },
   {
