--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -369,12 +369,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9fb321ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Family Name</th>\n",
+       "      <th>Birthdate</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Start date</th>\n",
+       "      <th>End date</th>\n",
+       "      <th>Client Type</th>\n",
+       "      <th>Client</th>\n",
+       "      <th>Project</th>\n",
+       "      <th>Project Type</th>\n",
+       "      <th>Task</th>\n",
+       "      <th>Owner</th>\n",
+       "      <th>Member</th>\n",
+       "      <th>Duration (in days)</th>\n",
+       "      <th>Project Start date</th>\n",
+       "      <th>Project End date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S000001</td>\n",
+       "      <td>Mohammad Zain</td>\n",
+       "      <td>Abbas</td>\n",
+       "      <td>09/05/1995</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N3</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>06/09/2022</td>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Wikibase</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "      <td>Mohammad Zain Abbas</td>\n",
+       "      <td>47</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>06/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S000002</td>\n",
+       "      <td>Kainaat</td>\n",
+       "      <td>Amjid</td>\n",
+       "      <td>30/12/1996</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N1</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>13/09/2022</td>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Solid Pods</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "      <td>Kainaat Amjid</td>\n",
+       "      <td>55</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>13/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S000003</td>\n",
+       "      <td>Sergio</td>\n",
+       "      <td>Postigo</td>\n",
+       "      <td>12/02/1996</td>\n",
+       "      <td>Peru</td>\n",
+       "      <td>SK-N2</td>\n",
+       "      <td>26/07/2022</td>\n",
+       "      <td>13/10/2022</td>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Entity Resolution</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "      <td>Sergio Postigo</td>\n",
+       "      <td>60</td>\n",
+       "      <td>26/07/2022</td>\n",
+       "      <td>28/09/2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Id           Name Family Name   Birthdate Nationality Category  \\\n",
+       "0  S000001  Mohammad Zain       Abbas  09/05/1995   Pakistani    SK-N3   \n",
+       "1  S000002        Kainaat       Amjid  30/12/1996   Pakistani    SK-N1   \n",
+       "2  S000003         Sergio     Postigo  12/02/1996        Peru    SK-N2   \n",
+       "\n",
+       "   Start date    End date Client Type      Client Project Project Type  \\\n",
+       "0  19/07/2022  06/09/2022     NTTData  SEMBU Team   SEMBU      Project   \n",
+       "1  19/07/2022  13/09/2022     NTTData  SEMBU Team   SEMBU      Project   \n",
+       "2  26/07/2022  13/10/2022     NTTData  SEMBU Team   SEMBU      Project   \n",
+       "\n",
+       "                Task           Owner               Member  Duration (in days)  \\\n",
+       "0           Wikibase  Emmanuel Jamin  Mohammad Zain Abbas                  47   \n",
+       "1         Solid Pods  Emmanuel Jamin        Kainaat Amjid                  55   \n",
+       "2  Entity Resolution  Emmanuel Jamin       Sergio Postigo                  60   \n",
+       "\n",
+       "  Project Start date Project End date  \n",
+       "0         19/07/2022       06/09/2022  \n",
+       "1         19/07/2022       13/09/2022  \n",
+       "2         26/07/2022       28/09/2022  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "member_df = team_df.merge(project_df, left_on=\"full_name\", right_on=\"Member\", how=\"left\")"
+    "member_df = team_df.merge(project_df, left_on=\"full_name\", right_on=\"Member\", how=\"right\")\n",
+    "member_df.drop(columns=[\"full_name\"], inplace=True)\n",
+    "member_df.head()"
    ]
   },
   {
