--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -115,30 +115,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "10185833",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'prop': 'P18',\n",
-       " 'data_type': 'external-id',\n",
-       " 'type': 'external',\n",
-       " 'mapping_code': 'P582'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "column_mapping['Project End date']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "aa920ff6",
    "metadata": {},
@@ -369,6 +345,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "10185833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prop': 'P18',\n",
+       " 'data_type': 'external-id',\n",
+       " 'type': 'external',\n",
+       " 'mapping_code': 'P582'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_mapping['Project End date']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "9fb321ac",
    "metadata": {},
@@ -523,6 +523,54 @@
    "outputs": [],
    "source": [
     "item = wbi.item.new()\n",
+    "\n",
+    "# iterate over dataframe rows\n",
+    "for index, row in member_df.iterrows():\n",
+    "    # get the item\n",
+    "    item = wbi.item.new()\n",
+    "    # iterate over columns\n",
+    "    for column in row.index:\n",
+    "        # get the wikibase property\n",
+    "        property_id = column_mapping[column]['property']\n",
+    "        # get the value\n",
+    "        value = row[column]\n",
+    "        # get the datatype\n",
+    "        datatype = column_mapping[column]['datatype']\n",
+    "        # get the qualifier\n",
+    "        qualifier = column_mapping[column]['qualifier']\n",
+    "        # get the reference\n",
+    "        reference = column_mapping[column]['reference']\n",
+    "        # get the reference value\n",
+    "        reference_value = column_mapping[column]['reference_value']\n",
+    "        # get the reference datatype\n",
+    "        reference_datatype = column_mapping[column]['reference_datatype']\n",
+    "        # get the reference property\n",
+    "        reference_property = column_mapping[column]['reference_property']\n",
+    "        # get the reference qualifier\n",
+    "        reference_qualifier = column_mapping[column]['reference_qualifier']\n",
+    "        # get the reference qualifier value\n",
+    "        reference_qualifier_value = column_mapping[column]['reference_qualifier_value']\n",
+    "        # get the reference qualifier datatype\n",
+    "        reference_qualifier_datatype = column_mapping[column]['reference_qualifier_datatype']\n",
+    "        # get the reference qualifier property\n",
+    "        reference_qualifier_property = column_mapping[column]['reference_qualifier_property']\n",
+    "        # get the reference qualifier qualifier\n",
+    "        reference_qualifier_qualifier = column_mapping[column]['reference_qualifier_qualifier']\n",
+    "        # get the reference qualifier qualifier value\n",
+    "        reference_qualifier_qualifier_value = column_mapping[column]['reference_qualifier_qualifier_value']\n",
+    "        # get the reference qualifier qualifier datatype\n",
+    "        reference_qualifier_qualifier_datatype = column_mapping[column]['reference_qualifier_qualifier_datatype']\n",
+    "        # get the reference qualifier qualifier property\n",
+    "        reference_qualifier_qualifier_property = column_mapping[column]['reference_qualifier_qualifier_property']\n",
+    "        # get the reference qualifier qualifier qualifier\n",
+    "        reference_qualifier_qualifier_qualifier = column_mapping[column]['reference_qualifier_qualifier_qualifier']\n",
+    "        # get the reference qualifier qualifier qualifier value\n",
+    "        reference_qualifier_qualifier_qualifier_value = column_mapping[column]['reference_qualifier_qualifier_qualifier_value']\n",
+    "        # get the reference qualifier qualifier qualifier datatype\n",
+    "        reference_qualifier_qualifier_qualifier_datatype = column_mapping[column]['reference_qualifier_qualifier_qualifier_datatype']\n",
+    "        # get the reference qualifier qualifier qualifier property\n",
+    "        reference_qualifier_qualifier_qualifier_property = column_mapping[column]['reference_qualifier_qualifier_qualifier_property']\n",
+    "        # get the reference qualifier qualifier\n",
     "\n",
     "item.labels.set('en', 'Mohammad Zain Abbas')\n",
     "item.descriptions.set('en', 'BDMA Team Member')\n",
