--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     "data_dir = join(parent_dir, \"data\")\n",
     "team_data = join(data_dir, \"BDMA_Team_v1.csv\")\n",
     "project_data = join(data_dir, \"BDMA_Projects_v1.csv\")\n",
-    "column_mapping = join(data_dir, \"column_mapping.csv\")"
+    "column_mapping_data = join(data_dir, \"column_mapping.csv\")"
    ]
   },
   {
@@ -104,12 +104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(column_mapping)\n",
+    "df = pd.read_csv(column_mapping_data)\n",
     "column_mapping = df.set_index(\"column\").T.to_dict()"
    ]
   },
@@ -345,30 +345,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "10185833",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'prop': 'P18',\n",
-       " 'data_type': 'external-id',\n",
-       " 'type': 'external',\n",
-       " 'mapping_code': 'P582'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "column_mapping['Project End date']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "9fb321ac",
    "metadata": {},
@@ -517,6 +493,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "10185833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prop': 'P15', 'data_type': 'string', 'type': 'internal', 'mapping_code': nan}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_mapping['Member']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "29dc0a2d",
    "metadata": {},
@@ -530,10 +527,16 @@
     "    item = wbi.item.new()\n",
     "    # iterate over columns\n",
     "    for column in row.index:\n",
+    "        __value = row[column]\n",
+    "        __col_mapping = column_mapping[column]\n",
+    "\n",
+    "        if col\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
     "        # get the wikibase property\n",
-    "        property_id = column_mapping[column]['property']\n",
     "        # get the value\n",
-    "        value = row[column]\n",
     "        # get the datatype\n",
     "        datatype = column_mapping[column]['datatype']\n",
     "        # get the qualifier\n",
