Work in progress

--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -525,6 +525,9 @@
     "for index, row in member_df.iterrows():\n",
     "    # get the item\n",
     "    item = wbi.item.new()\n",
+    "    new_qualifiers = Qualifiers()\n",
+    "    \n",
+    "\n",
     "    # iterate over columns\n",
     "    for column in row.index:\n",
     "        __value = row[column]\n",
