--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -526,7 +526,8 @@
     "    # get the item\n",
     "    item = wbi.item.new()\n",
     "    new_qualifiers = Qualifiers()\n",
-    "    \n",
+    "    new_references = References()\n",
+    "    is_claim = False\n",
     "\n",
     "    # iterate over columns\n",
     "    for column in row.index:\n",
