--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -534,56 +534,18 @@
     "        __value = row[column]\n",
     "        __col_mapping = column_mapping[column]\n",
     "\n",
-    "        if col\n",
+    "        if column == \"Member\":\n",
+    "            item.labels.set('en', __value)\n",
+    "            item.descriptions.set('en', 'A BDMA Team Member')\n",
+    "            item.sitelinks.set('enwiki', 'Mohammad Zain Abbas')\n",
+    "\n",
+    "            item.write(login)\n",
     "        \n",
     "\n",
     "\n",
     "\n",
     "        # get the wikibase property\n",
-    "        # get the value\n",
-    "        # get the datatype\n",
-    "        datatype = column_mapping[column]['datatype']\n",
-    "        # get the qualifier\n",
-    "        qualifier = column_mapping[column]['qualifier']\n",
-    "        # get the reference\n",
-    "        reference = column_mapping[column]['reference']\n",
-    "        # get the reference value\n",
-    "        reference_value = column_mapping[column]['reference_value']\n",
-    "        # get the reference datatype\n",
-    "        reference_datatype = column_mapping[column]['reference_datatype']\n",
-    "        # get the reference property\n",
-    "        reference_property = column_mapping[column]['reference_property']\n",
-    "        # get the reference qualifier\n",
-    "        reference_qualifier = column_mapping[column]['reference_qualifier']\n",
-    "        # get the reference qualifier value\n",
-    "        reference_qualifier_value = column_mapping[column]['reference_qualifier_value']\n",
-    "        # get the reference qualifier datatype\n",
-    "        reference_qualifier_datatype = column_mapping[column]['reference_qualifier_datatype']\n",
-    "        # get the reference qualifier property\n",
-    "        reference_qualifier_property = column_mapping[column]['reference_qualifier_property']\n",
-    "        # get the reference qualifier qualifier\n",
-    "        reference_qualifier_qualifier = column_mapping[column]['reference_qualifier_qualifier']\n",
-    "        # get the reference qualifier qualifier value\n",
-    "        reference_qualifier_qualifier_value = column_mapping[column]['reference_qualifier_qualifier_value']\n",
-    "        # get the reference qualifier qualifier datatype\n",
-    "        reference_qualifier_qualifier_datatype = column_mapping[column]['reference_qualifier_qualifier_datatype']\n",
-    "        # get the reference qualifier qualifier property\n",
-    "        reference_qualifier_qualifier_property = column_mapping[column]['reference_qualifier_qualifier_property']\n",
-    "        # get the reference qualifier qualifier qualifier\n",
-    "        reference_qualifier_qualifier_qualifier = column_mapping[column]['reference_qualifier_qualifier_qualifier']\n",
-    "        # get the reference qualifier qualifier qualifier value\n",
-    "        reference_qualifier_qualifier_qualifier_value = column_mapping[column]['reference_qualifier_qualifier_qualifier_value']\n",
-    "        # get the reference qualifier qualifier qualifier datatype\n",
-    "        reference_qualifier_qualifier_qualifier_datatype = column_mapping[column]['reference_qualifier_qualifier_qualifier_datatype']\n",
-    "        # get the reference qualifier qualifier qualifier property\n",
-    "        reference_qualifier_qualifier_qualifier_property = column_mapping[column]['reference_qualifier_qualifier_qualifier_property']\n",
-    "        # get the reference qualifier qualifier\n",
-    "\n",
-    "item.labels.set('en', 'Mohammad Zain Abbas')\n",
-    "item.descriptions.set('en', 'BDMA Team Member')\n",
-    "item.sitelinks.set('enwiki', 'Mohammad Zain Abbas')\n",
-    "\n",
-    "item.write(login)\n"
+    "\n"
    ]
   }
  ],
