--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -537,9 +537,14 @@
     "        if column == \"Member\":\n",
     "            item.labels.set('en', __value)\n",
     "            item.descriptions.set('en', 'A BDMA Team Member')\n",
-    "            item.sitelinks.set('enwiki', 'Mohammad Zain Abbas')\n",
+    "            item.sitelinks.set('enwiki', __value)\n",
+    "        elif column == \"Project\":\n",
+    "            item.labels.set('en', __value)\n",
+    "            item.descriptions.set('en', 'A BDMA Project')\n",
+    "            item.sitelinks.set('enwiki', __value)\n",
+    "        \n",
     "\n",
-    "            item.write(login)\n",
+    "    item.write(login)\n",
     "        \n",
     "\n",
     "\n",
